deployment/kubernetes/ckad-scripts/ingress/ingress-path-based-routing-def.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-path-base
  namespace: ckad-test
 # annotations:
   # kubernetes.io/ingress.class: nginx
  #  nginx.ingress.kubernetes.io/use-regex: 'true'
  #  nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http: 
       paths: 
         - path: /billing/    #Sequence matter here..
           pathType: Prefix
           backend: 
              service: 
                 name: billing-kube-service
                 port: 
                   number: 20002
         - path: "/order/"   #Sequence matter here: path should be first
           pathType: Prefix
           backend: 
              service: 
                 name: order-kube-service
                 port: 
                   number: 20001
